fixed the issue of the icons over the menus by using variables

--- a/src/components/baselayout/LoggedInHeader.module.css
+++ b/src/components/baselayout/LoggedInHeader.module.css
@@ -167,6 +167,10 @@
         border: none;
     }
 
+    .header.open {
+        z-index: var(--menu-zindex-active);
+    }
+
     .header_nav {
         flex-direction: column;
         position: absolute;
