--- a/src/components/sections/AccountsSection.module.css
+++ b/src/components/sections/AccountsSection.module.css
@@ -2,7 +2,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 30% 70%;
-    height: calc(100vh - 100px);
+    height: calc(100vh - var(--header-height));
 }
 
 .categories_section {
@@ -26,10 +26,34 @@
 }
 
 .accounts_section_gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    justify-content: center ;
+    width: 100%;
     gap: 15px;
     background-color: var(--primary-color);
     border: 1px solid var(--ternary-color);
     padding: 15px;
+}
+
+/* Media Queries - RESPONSIVE */
+
+@media (max-width: 1023px) {
+
+    .accounts_page_section {
+        grid-template-columns: 100%;
+    }
+    .categories_section {
+        display: none;
+    }
+}
+
+@media (max-width: 1023px) {
+
+    .accounts_section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 20px;
+    }
 }
