settings page is responsive

--- a/src/app/(loggedin)/dashboard/settings/Settings.module.css
+++ b/src/app/(loggedin)/dashboard/settings/Settings.module.css
@@ -15,3 +15,14 @@
     width: fit-content;
     gap: 30px;
 }
+
+
+/* Media Queries - RESPONSIVE */
+
+@media (max-width: 767px) {
+
+    .settings_sections {
+        width: 100%;
+        padding: 50px;
+    }
+}
