--- a/src/components/CategoryItem.module.css
+++ b/src/components/CategoryItem.module.css
@@ -43,3 +43,17 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.category_edit_form_buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+/* Media Queries - RESPONSIVE */
+
+@media (max-width: 767px) {
+    .category_edit_form {
+        flex-wrap: wrap;
+    }
+}
