--- a/src/components/sections/AccountSection.module.css
+++ b/src/components/sections/AccountSection.module.css
@@ -32,6 +32,13 @@
     background-color: var(--primary-color);
     border-left: 1px solid var(--quarternary-color);
 }
+.empty_transactions_list_message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
 
 /* Media Queries - RESPONSIVE */
 
