--- a/src/components/sections/AccountsSection.module.css
+++ b/src/components/sections/AccountsSection.module.css
@@ -35,6 +35,14 @@
     padding: 15px;
 }
 
+.empty_accounts_list_message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
 /* Media Queries - RESPONSIVE */
 
 @media (max-width: 1023px) {
