--- a/src/components/sections/TransactionsLayoutSection.module.css
+++ b/src/components/sections/TransactionsLayoutSection.module.css
@@ -33,6 +33,14 @@
     border-left: 1px solid var(--quarternary-color);
 }
 
+.empty_transactions_list_message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
 /* Media Queries - RESPONSIVE */
 
 @media (max-width: 1439px) {
